# openai-agent-school

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.smithery  README.md  agent_app.py  api_params.jsonc  api_params.py  app.py  chat.py  config.overrides.jsonc.example  config.yaml  function_call.py  functions.py  main.py  mcp.py  mcp_server.py  package.json  prompt_tools.py  prompt_variables.yaml  pyproject.toml  requirements.txt  server.py  smithery.Dockerfile  smithery.yaml  tools.py  update.sh  utils.py  wrangler.toml
.devcontainer/: .env.example  devcontainer.json  pull_chatkit.sh  setup.sh
.devcontainer/example/: .env  api_params.jsonc
.github/workflows/: keep-workflow-enabled.yml  keepalive-url.yml
.smithery/: Dockerfile
assets/static/: script.js  style.css
assets/templates/: agent.html  index.html  login.html  mcp.html
chatkit/functions/: _middleware.js
dpo/data/train/: 08.yaml  10.yaml
dpo/data/val/: 01.yaml  02.yaml  05.yaml
fine-tuning/dpo/: convert_and_upload.py
fine-tuning/rft/data/: grader.yaml
fine_tuning/dpo/: convert_and_upload.py
fine_tuning/dpo/data/: 05.yaml
fine_tuning/rft/: convert_and_upload.py
fine_tuning/rft/data/: 01.yaml  02.yaml  03.yaml  04.yaml  (+6 more)
fine_tuning/sft/: convert_and_upload.py
fine_tuning/supervised/: data_gen.py
fine_tuning_data/preference/: convert_and_upload.py
fine_tuning_data/reinforcement/: convert_and_upload.py  grader.yaml
fine_tuning_data/supervised/: convert_and_upload.py
openai-chatkit-starter-app/: wrangler.toml
templates/: agent.html  index.html  login.html  mcp.html
(+52 files in other folders)
